vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__for_generate_declarations.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\ngen: for idx in 0 to 1 generate\n  signal foo : natural;\nbegin\n  foo <= bar;\nend generate;\",)"
---
ForGenerateStatement
  StmtLabel
    Identifier 'gen'
    Colon
  ForGeneratePreamble
    Keyword(For)
    ParameterSpecification
      Identifier 'idx'
      Keyword(In)
      BinaryExpression
        LiteralExpression
          AbstractLiteral '0'
        Keyword(To)
        LiteralExpression
          AbstractLiteral '1'
    Keyword(Generate)
  GenerateStatementBody
    GenerateBodyDeclarations
      Declarations
        SignalDeclaration
          Keyword(Signal)
          IdentifierList
            Identifier 'foo'
          Colon
          SubtypeIndication
            Name
              NameDesignatorPrefix
                Identifier 'natural'
          SemiColon
      DeclarationStatementSeparator
        Keyword(Begin)
    ConcurrentStatements
      ConcurrentSimpleSignalAssignment
        NameTarget
          Name
            NameDesignatorPrefix
              Identifier 'foo'
        LTE
        WaveformElements
          WaveformElement
            NameExpression
              Name
                NameDesignatorPrefix
                  Identifier 'bar'
        SemiColon
  GenerateEpilogue
    Keyword(End)
    Keyword(Generate)
    SemiColon
