vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__for_generate_empty_declarations-3.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\ngen: for idx in 0 to 1 generate\nbegin\n  foo <= bar;\nend;\nend generate;\",)"
---
ForGenerateStatement
  StmtLabel
    Identifier 'gen'
    Colon
  ForGeneratePreamble
    Keyword(For)
    ParameterSpecification
      Identifier 'idx'
      Keyword(In)
      BinaryExpression
        LiteralExpression
          AbstractLiteral '0'
        Keyword(To)
        LiteralExpression
          AbstractLiteral '1'
    Keyword(Generate)
  GenerateStatementBody
    GenerateBodyDeclarations
      DeclarationStatementSeparator
        Keyword(Begin)
    ConcurrentStatements
      ConcurrentSimpleSignalAssignment
        NameTarget
          Name
            NameDesignatorPrefix
              Identifier 'foo'
        LTE
        WaveformElements
          WaveformElement
            NameExpression
              Name
                NameDesignatorPrefix
                  Identifier 'bar'
        SemiColon
    GenerateBodyEpilogue
      Keyword(End)
      SemiColon
  GenerateEpilogue
    Keyword(End)
    Keyword(Generate)
    SemiColon
