vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__if_elseif_else_generate.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\ngen: if cond = true generate\n  variable v1 : boolean;\nbegin\n  foo1(clk);\nelsif cond2 = true generate\n  variable v2 : boolean;\nbegin\n  foo2(clk);\nelse generate\n  variable v3 : boolean;\nbegin\n  foo3(clk);\nend generate;\",)"
---
IfGenerateStatement
  Label
    Identifier 'gen'
    Colon
  IfGenerateIf
    Keyword(If)
    BinaryExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'cond'
      EQ
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'true'
    Keyword(Generate)
    GenerateStatementBody
      GenerateBodyDeclarations
        Declarations
          VariableDeclaration
            Keyword(Variable)
            IdentifierList
              Identifier 'v1'
            Colon
            SubtypeIndication
              Name
                NameDesignatorPrefix
                  Identifier 'boolean'
            SemiColon
        DeclarationStatementSeparator
          Keyword(Begin)
      ConcurrentStatements
        ConcurrentProcedureCallOrComponentInstantiationStatement
          Name
            NameDesignatorPrefix
              Identifier 'foo1'
            ParenthesizedName
              LeftPar
              AssociationList
                AssociationElement
                  ActualPart
                    ActualPartExpression
                      NameExpression
                        Name
                          NameDesignatorPrefix
                            Identifier 'clk'
              RightPar
          SemiColon
  IfGenerateElsif
    Keyword(Elsif)
    BinaryExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'cond2'
      EQ
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'true'
    Keyword(Generate)
    GenerateStatementBody
      GenerateBodyDeclarations
        Declarations
          VariableDeclaration
            Keyword(Variable)
            IdentifierList
              Identifier 'v2'
            Colon
            SubtypeIndication
              Name
                NameDesignatorPrefix
                  Identifier 'boolean'
            SemiColon
        DeclarationStatementSeparator
          Keyword(Begin)
      ConcurrentStatements
        ConcurrentProcedureCallOrComponentInstantiationStatement
          Name
            NameDesignatorPrefix
              Identifier 'foo2'
            ParenthesizedName
              LeftPar
              AssociationList
                AssociationElement
                  ActualPart
                    ActualPartExpression
                      NameExpression
                        Name
                          NameDesignatorPrefix
                            Identifier 'clk'
              RightPar
          SemiColon
  IfGenerateElse
    Keyword(Else)
    Keyword(Generate)
    GenerateStatementBody
      GenerateBodyDeclarations
        Declarations
          VariableDeclaration
            Keyword(Variable)
            IdentifierList
              Identifier 'v3'
            Colon
            SubtypeIndication
              Name
                NameDesignatorPrefix
                  Identifier 'boolean'
            SemiColon
        DeclarationStatementSeparator
          Keyword(Begin)
      ConcurrentStatements
        ConcurrentProcedureCallOrComponentInstantiationStatement
          Name
            NameDesignatorPrefix
              Identifier 'foo3'
            ParenthesizedName
              LeftPar
              AssociationList
                AssociationElement
                  ActualPart
                    ActualPartExpression
                      NameExpression
                        Name
                          NameDesignatorPrefix
                            Identifier 'clk'
              RightPar
          SemiColon
  IfGenerateStatementEpilogue
    Keyword(End)
    Keyword(Generate)
    SemiColon
