vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__if_elseif_else_generate_empty.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\ngen: if cond = true generate\nelsif cond2 = true generate\nelse generate\nend generate;\",)"
---
IfGenerateStatement
  Label
    Identifier 'gen'
    Colon
  IfGenerateIf
    Keyword(If)
    BinaryExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'cond'
      EQ
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'true'
    Keyword(Generate)
  IfGenerateElsif
    Keyword(Elsif)
    BinaryExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'cond2'
      EQ
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'true'
    Keyword(Generate)
  IfGenerateElse
    Keyword(Else)
    Keyword(Generate)
  IfGenerateStatementEpilogue
    Keyword(End)
    Keyword(Generate)
    SemiColon
