vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__if_elseif_else_generate_inner_end.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\ngen: if alt1: cond = true generate\nend alt1;\nelsif alt2: cond2 = true generate\nend alt2;\nelse alt3: generate\nend alt3;\nend generate;\",)"
---
IfGenerateStatement
  Label
    Identifier 'gen'
    Colon
  IfGenerateIf
    Keyword(If)
    Label
      Identifier 'alt1'
      Colon
    BinaryExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'cond'
      EQ
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'true'
    Keyword(Generate)
    GenerateStatementBody
      GenerateBodyEpilogue
        Keyword(End)
        Identifier 'alt1'
        SemiColon
  IfGenerateElsif
    Keyword(Elsif)
    Label
      Identifier 'alt2'
      Colon
    BinaryExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'cond2'
      EQ
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'true'
    Keyword(Generate)
    GenerateStatementBody
      GenerateBodyEpilogue
        Keyword(End)
        Identifier 'alt2'
        SemiColon
  IfGenerateElse
    Keyword(Else)
    Label
      Identifier 'alt3'
      Colon
    Keyword(Generate)
    GenerateStatementBody
      GenerateBodyEpilogue
        Keyword(End)
        Identifier 'alt3'
        SemiColon
  GenerateEpilogue
    Keyword(End)
    Keyword(Generate)
    SemiColon
